cambios en etiqutas

--- a/Servicios/Principal.html
+++ b/Servicios/Principal.html
@@ -28,7 +28,7 @@
 		</aside>
 		
 		<picture>
-			<img src="http://www.genetrix.com.ec/images/Mision.png" height="50" width="40">
+			<img src="http://www.genetrix.com.ec/images/Mision.png" height="50" width="40" alt="Nosotros">
 		</picture>
 		
 		<p>
