--- a/Servicios/Principal.html
+++ b/Servicios/Principal.html
@@ -32,7 +32,7 @@
 		</picture>
 		
 		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie quam non magna dapibus faucibus. Suspendisse potenti. Maecenas lobortis, turpis imperdiet pulvinar pulvinar, libero tortor fringilla quam, vel dictum leo odio ut magna. Ut sed condimentum ligula, nec malesuada felis. Fusce tempor nisl est, vitae laoreet elit malesuada ut. Duis venenatis, nulla sed pharetra ultricies, diam felis placerat neque, a dictum massa dolor nec nisl. Aenean imperdiet sem eu felis facilisis egestas. Nullam sed luctus augue. Vestibulum in pretium felis. Donec laoreet venenatis laoreet.
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie quam non magna dapibus faucibus. Suspendisse potenti. Maecenas lobortis, turpis imperdiet pulvinar pulvinar, libero tortor fringilla quam, vel dictum leo odio ut magna. Ut sed condimentum ligula, nec malesuada felis. Fusce tempor nisl est, vitae laoreet elit malesuada ut. Duis venenatis, nulla sed pharetra ultricies, diam felis placerat neque, a dictum massa dolor nec nisl. Aenean imperdiet sem eu felis facilisis egestas. Nullam sed luctus augue. Vestibulum in pretium felis. Donec laoreet venenatis laoreet...
 		</p>
 		
 		<label for="meeting">Fechas Importantes : </label><input id="meeting" type="date" value="2011-01-13"/>
