--- a/Servicios/encuentranos.html
+++ b/Servicios/encuentranos.html
@@ -40,19 +40,28 @@
   			<input type="radio" name="utilidad"> poco
  			<input type="radio" name="utilidad"> algo
 			<input type="radio" name="utilidad"> muy	
-			<input type="radio" name="utilidad"> completamente			
+			<input type="radio" name="utilidad"> completamente<br>			
 				
+			<label>edad</label>
+			<input type="number" name="quantity" min="1" max="100"><br>
+
+			<label>provincia</label>
+			 <select>
+  				<option value="Azuay">Azuay</option>
+  				<option value="Guayas">Guayas</option>
+  				<option value="Pichincha">Pichincha</option>
+  				
+			</select> 
+			<br><label>Comentarios:</label><br>
+			 	<textarea name="message" rows="10" cols="30">
+					Ingrese aqui su comentario.
+				</textarea><br>
+			<input type="checkbox" name="noticias">Deseo subscribirme para recibir noticias<br>
+			<button type="button">Enviar</button> 
 			
 		</form>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-		<h2>Servicios Registrados</h2>
-		<ul>
-			<li>SRI</li>
-			<li>Telefonia Movil</li>
-			<li>Telefonia FIja</li>
-			<li>Cable</li>
-			<li>Pensiones alimenticias</li>
-		</ul>
+		
+		
 		
 		
 	</body>
