--- a/Servicios/encuentranos.html
+++ b/Servicios/encuentranos.html
@@ -3,6 +3,7 @@
 	
 	<head>
 		<title>TodoMisServicios - Quienes Somos</title>
+		<meta charset="UTF-8">
 	</head>
 	
 	<body>
@@ -17,10 +18,10 @@
 		
 		
 		<aside class="sidebar">
-			<section>Como Usar Nuestro sitio
+			<section><h2>Como Usar Nuestro sitio</h2>
 			</section>
 				
-			<section>Stream
+			<section><h2>Stream</h2>
 				<video width="320" height="240" controls>
 					<source src="https://www.youtube.com/watch?v=cbP2N1BQdYc">
 				</video>
@@ -61,13 +62,13 @@
 			
 		</form>
 		
-		
+		<footer>
+			El contenido es propiedad intelectual del grupo de estudio de la materia DAWS
+		</footer>
 		
 		
 	</body>
 	
-	<footer>
-		El contenido es propiedad intelectual del grupo de estudio de la materia DAWS
-	</footer>
+	
 
 </html>
