--- a/Servicios/personal.html
+++ b/Servicios/personal.html
@@ -3,6 +3,7 @@
 	
 	<head>
 		<title>TodoMisServicios - Quienes Somos</title>
+		<meta charset="UTF-8">
 	</head>
 	
 	<body>
@@ -17,10 +18,10 @@
 		
 		
 		<aside class="sidebar">
-			<section>Como Usar Nuestro sitio
+			<section><h2>Como Usar Nuestro sitio</h2>
 			</section>
 				
-			<section>Stream
+			<section><h2>Stream</h2>
 				<video width="320" height="240" controls>
 					<source src="https://www.youtube.com/watch?v=cbP2N1BQdYc">
 				</video>
@@ -28,7 +29,7 @@
 		</aside>
 		
 		<picture>
-			<img src="http://www.genetrix.com.ec/images/Mision.png" height="50" width="40">
+			<img src="http://www.genetrix.com.ec/images/Mision.png" alt="testimage" height="50" width="40">
 		</picture>
 		<h2>Datos Personales</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -41,11 +42,11 @@
 			<li>Pensiones alimenticias</li>
 		</ul>
 		
-		
+		<footer>
+			El contenido es propiedad intelectual del grupo de estudio de la materia DAWS
+		</footer>
 	</body>
 	
-	<footer>
-		El contenido es propiedad intelectual del grupo de estudio de la materia DAWS
-	</footer>
+	
 
 </html>
