Validando y corrigiendo html

--- a/Servicios/index.html
+++ b/Servicios/index.html
@@ -2,25 +2,29 @@
 <html lang="es">
 	
 	<head>
+		<meta charset="UTF-8">
 		<title>TodoMisServicios - Quienes Somos</title>
 	</head>
 	
 	<body>
 		<nav>
 			<ul>
-				<li>Principal</li>
-				<li>Quienes Somos</li>
-				<li>Personal</li>
-				<li>Encuentranos</li>
+				<li><a href="index.html">Principal</a></li>
+				<li><a href="quienessomos.html">Quienes Somos</a></li>
+				<li><a href="personal.html">Personal</a></li>
+				<li><a href="encuentranos.html">Encuentranos</a></li>
 			</ul>		
 		</nav>
 		<h2>¿Quienes Somos?</h2>
 		
 		<aside class="sidebar">
-			<section>Como Usar Nuestro sitio
+			<section>
+				<h3>Como Usar Nuestro sitio</h3>
 			</section>
 				
-			<section>Stream
+			<section>
+				<h3>Stream</h3>
+
 				<video width="320" height="240" controls>
 					<source src="https://www.youtube.com/watch?v=cbP2N1BQdYc">
 				</video>
@@ -35,7 +39,7 @@
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie quam non magna dapibus faucibus. Suspendisse potenti. Maecenas lobortis, turpis imperdiet pulvinar pulvinar, libero tortor fringilla quam, vel dictum leo odio ut magna. Ut sed condimentum ligula, nec malesuada felis. Fusce tempor nisl est, vitae laoreet elit malesuada ut. Duis venenatis, nulla sed pharetra ultricies, diam felis placerat neque, a dictum massa dolor nec nisl. Aenean imperdiet sem eu felis facilisis egestas. Nullam sed luctus augue. Vestibulum in pretium felis. Donec laoreet venenatis laoreet...
 		</p>
 		
-		<label for="meeting">Fechas Importantes : </label><input id="meeting" type="date" value="2011-01-13"/>
+		<label>Fechas Importantes : </label><input type="date" name="start" required value="2000-01-01">
 		
 		<table style="width:auto">
 			<tr>
@@ -52,11 +56,9 @@
 			</tr>
 		</table>
 		
-	</body>
-	
-	
-		
-	<footer>
+		<footer>
 		El contenido es propiedad intelectual del grupo de estudio de la materia DAWS
-	</footer>
+		</footer>
+	</body>
+		
 </html>
