--- a/Servicios/quienessomos.html
+++ b/Servicios/quienessomos.html
@@ -2,16 +2,17 @@
 <html lang="es">
 	
 	<head>
+		<meta charset="UTF-8">
 		<title>TodoMisServicios - Quienes Somos</title>
 	</head>
 	
 	<body>
 		<nav>
 			<ul>
-				<li>Principal</li>
-				<li>Quienes Somos</li>
-				<li>Personal</li>
-				<li>Encuentranos</li>
+				<li><a href="index.html">Principal</a></li>
+				<li><a href="quienessomos.html">Quienes Somos</a></li>
+				<li><a href="personal.html">Personal</a></li>
+				<li><a href="encuentranos.html">Encuentranos</a></li>
 			</ul>		
 		</nav>
 		<h2>¿Quienes Somos?</h2>
@@ -40,10 +41,12 @@
 		</picture>
 		<h3>Visión</h3>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+		
+		<footer>
+		El contenido es propiedad intelectual del grupo de estudio de la materia DAWS
+		</footer>
 	</body>
 	
-	<footer>
-		El contenido es propiedad intelectual del grupo de estudio de la materia DAWS
-	</footer>
+	
 
 </html>
