añadidos links entre archivos .html

--- a/Servicios/personal.html
+++ b/Servicios/personal.html
@@ -9,10 +9,10 @@
 	<body>
 		<nav>
 			<ul>
-				<li>Principal</li>
-				<li>Quienes Somos</li>
-				<li>Personal</li>
-				<li>Encuentranos</li>
+				<i><a href="index.html">Principal</a></li>
+				<li><a href="quienessomos.html">Quienes Somos</a></li>
+				<li><a href="personal.html">Personal</a></li>
+				<li><a href="encuentranos.html">Encuentranos</a></li>
 			</ul>		
 		</nav>
 		
