--- a/Servicios/personal.html
+++ b/Servicios/personal.html
@@ -9,7 +9,7 @@
 	<body>
 		<nav>
 			<ul>
-				<i><a href="index.html">Principal</a></li>
+				<li><a href="index.html">Principal</a></li>
 				<li><a href="quienessomos.html">Quienes Somos</a></li>
 				<li><a href="personal.html">Personal</a></li>
 				<li><a href="encuentranos.html">Encuentranos</a></li>
