--- a/Servicios/personal.html
+++ b/Servicios/personal.html
@@ -7,7 +7,9 @@
 	</head>
 	
 	<body>
-		<h1>TodoMisServicios.ec</h1>
+		<header>
+			<h1>TodoMisServicios.ec</h1>
+		</header>
 		<nav>
 			<ul>
 				<li><a href="index.html">Principal</a></li>
@@ -19,13 +21,25 @@
 		
 		
 		<aside class="sidebar">
-			<section><h2>Como Usar Nuestro sitio</h2>
-			</section>
-				
-			<section><h2>Stream</h2>
+			<section>
+				<h3>Como Usar Nuestro sitio</h3>
 				<video width="320" height="240" controls>
 					<source src="https://www.youtube.com/watch?v=cbP2N1BQdYc">
 				</video>
+			</section>
+				
+			<section>
+				<h3>Stream</h3>
+				<div class="tweet" id="tweet-1">      
+				<div class="tweet-avatar-wrapper">
+					<div class="avatar"></div>
+				</div>
+				<div class="tweet-wrapper">
+					<span class="name"></span> <span class="handle"></span>
+					<span class="timestamp"></span>
+					<span class="copy"></span>
+				</div>
+				</div>		
 			</section>
 		</aside>
 		
