nav bar y footer y copyright sign

--- a/Servicios/encuentranos.html
+++ b/Servicios/encuentranos.html
@@ -4,6 +4,7 @@
 	<head>
 		<title>TodoMisServicios - Quienes Somos</title>
 		<meta charset="UTF-8">
+		<link rel="stylesheet" href="./css/tallercss1.css">
 	</head>
 	
 	<body>
@@ -63,7 +64,7 @@
 		</form>
 		
 		<footer>
-			El contenido es propiedad intelectual del grupo de estudio de la materia DAWS
+			&copy El contenido es propiedad intelectual del grupo de estudio de la materia DAWS
 		</footer>
 		
 		
