--- a/Servicios/quienessomos.html
+++ b/Servicios/quienessomos.html
@@ -4,6 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>TodoMisServicios - Quienes Somos</title>
+		<link rel="stylesheet" href="./css/tallercss1.css">
 	</head>
 	
 	<body>
