Header terminado y contenido principal a medias

--- a/Servicios/personal.html
+++ b/Servicios/personal.html
@@ -5,6 +5,7 @@
 		<title>TodoMisServicios - Quienes Somos</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="./css/tallercss1.css">
+		<link href="http://assets.insights.litmus.com/campaigns/tedc-2015/assets/tweets.css" type="text/css" rel="stylesheet" />
 	</head>
 	
 	<body>
@@ -59,7 +60,7 @@
 		</ul>
 		
 		<footer>
-			El contenido es propiedad intelectual del grupo de estudio de la materia DAWS
+			&copy El contenido es propiedad intelectual del grupo de estudio de la materia DAWS
 		</footer>
 	</body>
 	
