--- a/Servicios/encuentranos.html
+++ b/Servicios/encuentranos.html
@@ -5,6 +5,7 @@
 		<title>TodoMisServicios - Quienes Somos</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="./css/tallercss1.css">
+		<link href="http://assets.insights.litmus.com/campaigns/tedc-2015/assets/tweets.css" type="text/css" rel="stylesheet" />
 	</head>
 	
 	<body>
