--- a/Servicios/quienessomos.html
+++ b/Servicios/quienessomos.html
@@ -5,6 +5,7 @@
 		<meta charset="UTF-8">
 		<title>TodoMisServicios - Quienes Somos</title>
 		<link rel="stylesheet" href="./css/tallercss1.css">
+		<link href="http://assets.insights.litmus.com/campaigns/tedc-2015/assets/tweets.css" type="text/css" rel="stylesheet" />
 	</head>
 	
 	<body>
@@ -57,7 +58,7 @@
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 		
 		<footer>
-		El contenido es propiedad intelectual del grupo de estudio de la materia DAWS
+			&copy El contenido es propiedad intelectual del grupo de estudio de la materia DAWS
 		</footer>
 	</body>
 	
