--- a/Servicios/personal.html
+++ b/Servicios/personal.html
@@ -59,7 +59,7 @@
 		</ul>
 		
 		<footer>
-			El contenido es propiedad intelectual del grupo de estudio de la materia DAWS
+			<h3 id= 'footerText'>&copy El contenido de esta obra es de propiedad intelectual de nuestro grupo. Todos los derechos reservados.  Prohibida su reproducción total, parcial, comunicación pública o distribución sin autorización previa del titular de los derechos</h3>			<img src= "http://sytechlabs.com/img/whatiswebapplication.png">
 		</footer>
 	</body>
 	
