--- a/Servicios/index.html
+++ b/Servicios/index.html
@@ -4,12 +4,8 @@
 	<head>		
 		<meta charset="UTF-8">
 		<title>TodoMisServicios - Quienes Somos</title>
-<<<<<<< HEAD
-		<link rel="stylesheet" href="./css/tallercss1.css">
-=======
 		<link rel="stylesheet" href="css/tallercss1.css">
 		<link href="http://assets.insights.litmus.com/campaigns/tedc-2015/assets/tweets.css" type="text/css" rel="stylesheet" />
->>>>>>> 033686c58b108089b8215d20fe626eb7b1e37a86
 	</head>
 	
 	<body>
@@ -78,7 +74,8 @@
 		</table>
 		
 		<footer>
-		El contenido es propiedad intelectual del grupo de estudio de la materia DAWS
+			<h3 id= 'footerText'>&copy El contenido de esta obra es de propiedad intelectual de nuestro grupo. Todos los derechos reservados.  Prohibida su reproducción total, parcial, comunicación pública o distribución sin autorización previa del titular de los derechos</h3>
+			<img src= "http://sytechlabs.com/img/whatiswebapplication.png" id = 'foot'>
 		</footer>
 	</body>
 		
