--- a/Servicios/index.html
+++ b/Servicios/index.html
@@ -167,8 +167,12 @@
 		
 		
 		<footer>
-			<h3 id= 'footerText'>&copy El contenido de esta obra es de propiedad intelectual de nuestro grupo. Todos los derechos reservados.  Prohibida su reproducción total, parcial, comunicación pública o distribución sin autorización previa del titular de los derechos</h3>
-			<img src= "http://sytechlabs.com/img/whatiswebapplication.png" id = 'foot'>
+			<div id="footerTextContainer">
+				<h3>&copy El contenido de esta obra es de propiedad intelectual de nuestro grupo. Todos los derechos reservados.  Prohibida su reproducción total, parcial, comunicación pública o distribución sin autorización previa del titular de los derechos</h3>
+			</div>
+			
+			<img id ="footerImage" src= "http://sytechlabs.com/img/whatiswebapplication.png">
+			
 		</footer>
 	</body>
 		
