--- a/Servicios/personal.html
+++ b/Servicios/personal.html
@@ -60,9 +60,13 @@
 		</ul>
 		
 		<footer>
-			<h3 id= 'footerText'>&copy El contenido de esta obra es de propiedad intelectual de nuestro grupo. Todos los derechos reservados.  Prohibida su reproducción total, parcial, comunicación pública o distribución sin autorización previa del titular de los derechos</h3>			
-			<img src= "http://sytechlabs.com/img/whatiswebapplication.png">
-		</footer>
+				<div id="footerTextContainer">
+					<h3>&copy El contenido de esta obra es de propiedad intelectual de nuestro grupo. Todos los derechos reservados.  Prohibida su reproducción total, parcial, comunicación pública o distribución sin autorización previa del titular de los derechos</h3>
+				</div>
+				
+				<img id ="footerImage" src= "http://sytechlabs.com/img/whatiswebapplication.png">
+				
+			</footer>
 	</body>
 	
 	
