hover de imagenes y listas añadido

--- a/Servicios/encuentranos.html
+++ b/Servicios/encuentranos.html
@@ -80,13 +80,13 @@
 		</form>
 		
 		<footer>
-				<div id="footerTextContainer">
+				<div>
 					<h3>&copy El contenido de esta obra es de propiedad intelectual de nuestro grupo. Todos los derechos reservados.  Prohibida su reproducción total, parcial, comunicación pública o distribución sin autorización previa del titular de los derechos</h3>
 				</div>
 				
-				<img id ="footerImage" src= "http://sytechlabs.com/img/whatiswebapplication.png">
+				<img src= "http://sytechlabs.com/img/whatiswebapplication.png">
 				
-			</footer>
+		</footer>
 		
 		
 	</body>
