--- a/Servicios/personal.html
+++ b/Servicios/personal.html
@@ -52,21 +52,21 @@
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 		<h2>Servicios Registrados</h2>
 		<ul style="list-style-type:disc">
-			<li>SRI</li>
-			<li>Telefonia Movil</li>
-			<li>Telefonia FIja</li>
-			<li>Cable</li>
-			<li>Pensiones alimenticias</li>
+			<li class="tooltip">SRI<span class="tooltiptext">Servicio de Rentas</span></li>
+			<li class="tooltip">Telefonia Movil<span class="tooltiptext">Descripcion telefonia movil</span></li>
+			<li class="tooltip">Telefonia FIja<span class="tooltiptext">Descripcion telefonia fija</span></li>
+			<li class="tooltip">Cable<span class="tooltiptext">descripcion de cable</span></li>
+			<li class="tooltip">Pensiones alimenticias<span class="tooltiptext">descripcion pensiones alimenticias</span></li>
 		</ul>
 		
 		<footer>
-				<div id="footerTextContainer">
+				<div>
 					<h3>&copy El contenido de esta obra es de propiedad intelectual de nuestro grupo. Todos los derechos reservados.  Prohibida su reproducción total, parcial, comunicación pública o distribución sin autorización previa del titular de los derechos</h3>
 				</div>
 				
-				<img id ="footerImage" src= "http://sytechlabs.com/img/whatiswebapplication.png">
+				<img src= "http://sytechlabs.com/img/whatiswebapplication.png">
 				
-			</footer>
+		</footer>
 	</body>
 	
 	
