--- a/Servicios/quienessomos.html
+++ b/Servicios/quienessomos.html
@@ -46,25 +46,25 @@
 		</aside>
 		
 		<picture>
-			<img class="imagen" src="http://www.genetrix.com.ec/images/Mision.png" height="50" width="40" alt="Mision">
+			<img class="imagen" src="http://www.genetrix.com.ec/images/Mision.png" height="200" width="150" alt="Mision">
 		</picture>
 		<h3>Misión</h3>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 		
 		<picture>
-			<img class="imagen" src="https://www.uv.mx/veracruz/odontologia/files/2013/02/vision.png"  height="50" width="40" alt="Vision">
+			<img class="imagen" src="https://www.uv.mx/veracruz/odontologia/files/2013/02/vision.png"  height="200" width="150" alt="Vision">
 		</picture>
 		<h3>Visión</h3>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 		
 		<footer>
-				<div id="footerTextContainer">
+				<div>
 					<h3>&copy El contenido de esta obra es de propiedad intelectual de nuestro grupo. Todos los derechos reservados.  Prohibida su reproducción total, parcial, comunicación pública o distribución sin autorización previa del titular de los derechos</h3>
 				</div>
 				
-				<img id ="footerImage" src= "http://sytechlabs.com/img/whatiswebapplication.png">
+				<img src= "http://sytechlabs.com/img/whatiswebapplication.png">
 				
-			</footer>
+		</footer>
 	</body>
 	
 	
