--- a/Servicios/personal.html
+++ b/Servicios/personal.html
@@ -42,7 +42,7 @@
 					<span class="copy"></span>
 				</div>
 				</div>		
-			</section>
+			</section>s
 		</aside>
 		
 		<picture>
@@ -52,11 +52,11 @@
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 		<h2>Servicios Registrados</h2>
 		<ul style="list-style-type:disc">
-			<li class="tooltip">SRI<span class="tooltiptext">Servicio de Rentas</span></li>
-			<li class="tooltip">Telefonia Movil<span class="tooltiptext">Descripcion telefonia movil</span></li>
-			<li class="tooltip">Telefonia FIja<span class="tooltiptext">Descripcion telefonia fija</span></li>
-			<li class="tooltip">Cable<span class="tooltiptext">descripcion de cable</span></li>
-			<li class="tooltip">Pensiones alimenticias<span class="tooltiptext">descripcion pensiones alimenticias</span></li>
+			<li class="tooltip">SRI<span>Descripcion Servicio de Rentas Internas</span></li>
+			<li class="tooltip">Telefonia Movil<span>Descripcion telefonia movil</span></li>
+			<li class="tooltip">Telefonia FIja<span>Descripcion telefonia fija</span></li>
+			<li class="tooltip">Cable<span>descripcion de cable</span></li>
+			<li class="tooltip">Pensiones alimenticias<span>descripcion pensiones alimenticias</span></li>
 		</ul>
 		
 		<footer>
