hover sobre texto

--- a/Servicios/index.html
+++ b/Servicios/index.html
@@ -4,7 +4,7 @@
 	<head>		
 		<meta charset="UTF-8">
 		<title>TodoMisServicios - Quienes Somos</title>
-		<!-- <link rel="stylesheet" href="./css/calendar.css"> -->
+		<link rel="stylesheet" href="./css/calendar.css">
 		<link rel="stylesheet" href="./css/tallercss1.css">
 
 		<link href="http://assets.insights.litmus.com/campaigns/tedc-2015/assets/tweets.css" type="text/css" rel="stylesheet" />
