--- a/Servicios/index.html
+++ b/Servicios/index.html
@@ -4,7 +4,7 @@
 	<head>		
 		<meta charset="UTF-8">
 		<title>TodoMisServicios - Quienes Somos</title>
-		<link rel="stylesheet" href="./css/calendar.css">
+		<!-- <link rel="stylesheet" href="./css/calendar.css"> -->
 		<link rel="stylesheet" href="./css/tallercss1.css">
 
 		<link href="http://assets.insights.litmus.com/campaigns/tedc-2015/assets/tweets.css" type="text/css" rel="stylesheet" />
@@ -22,7 +22,7 @@
 				<li><a href="encuentranos.html">Encuentranos</a></li>
 			</ul>		
 		</nav>
-		<h2>¿Quienes Somos?</h2>
+		
 		
 		<aside class="sidebar">
 			<section>
@@ -34,48 +34,23 @@
 				
 			<section>
 				<h3>Stream</h3>
-				<div class="tweet" id="tweet-1">      
-				<div class="tweet-avatar-wrapper">
-					<div class="avatar"></div>
-				</div>
-				<div class="tweet-wrapper">
-					<span class="name"></span> <span class="handle"></span>
-					<span class="timestamp"></span>
-					<span class="copy"></span>
-				</div>
-				</div>		
+				<div class="stream">
+					<a class="twitter-timeline" data-width="256" data-height="300" data-dnt="true" href="https://twitter.com/espol_fiec?ref_src=twsrc%5Etfw">Tweets by espol_fiec</a> 
+					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+				</div>				
 			</section>
 		</aside>
 			
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie quam non magna dapibus faucibus. Suspendisse potenti. Maecenas lobortis, turpis imperdiet pulvinar pulvinar, libero tortor fringilla quam, vel dictum leo odio ut magna. Ut sed condimentum ligula, nec malesuada felis. Fusce tempor nisl est, vitae laoreet elit malesuada ut. Duis venenatis, nulla sed pharetra ultricies, diam felis placerat neque, a dictum massa dolor nec nisl. Aenean imperdiet sem eu felis facilisis egestas. Nullam sed luctus augue. Vestibulum in pretium felis. Donec laoreet venenatis laoreet...
-		</p>
 		
-		<table>
-			<tr>
-				<th>Servicios</th>
-				<th>Telefonos</th> 
-			</tr>
-			<tr>
-				<td>SRI</td>
-				<td>9804924</td> 				
-			</tr>
-			<tr>
-				<td>Agua Potable</td>
-				<td>3543553</td> 
-			</tr>
-			<tr>
-				<td>Electricidad</td>
-				<td>354355344</td> 
-			</tr>
-			<tr>
-				<td>Gas</td>
-				<td>12341413</td> 
-			</tr>
-		</table>
-		
-		<label>Fechas Importantes : </label>
+		<div id="principal">
+			<h2>¿Quienes Somos?</h2>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie quam non magna dapibus faucibus. Suspendisse potenti. Maecenas lobortis, turpis imperdiet pulvinar pulvinar, libero tortor fringilla quam, vel dictum leo odio ut magna. Ut sed condimentum ligula, nec malesuada felis. Fusce tempor nisl est, vitae laoreet elit malesuada ut. Duis venenatis, nulla sed pharetra ultricies, diam felis placerat neque, a dictum massa dolor nec nisl. Aenean imperdiet sem eu felis facilisis egestas. Nullam sed luctus augue. Vestibulum in pretium felis. Donec laoreet venenatis laoreet...
+			</p>
+		</div>
+				
 		<div class="container">
+			<label>Fechas Importantes : </label>
 			<div class="calendar-base">
 			
 				<div class="year">2018</div>
@@ -111,13 +86,13 @@
 				<!-- first week -->
 				<div class="second-week">02 03 04 05 06 07 08</div>
 				<!-- week -->
-				<div class="third-week"> 09 10 11 12 13 14 15</div>
+				<div class="third-week">09 10 11 12 13 14 15</div>
 				<!-- week -->
-				<div class="fourth-week"> 16 17 18 19 20 21 22</div>
+				<div class="fourth-week">16 17 18 19 20 21 22</div>
 				<!-- week -->
-				<div class="fifth-week"> 23 24 25 26 <strong class="white">27</strong> 28 29</div>
+				<div class="fifth-week">23 24 25 26 <strong class="white">27</strong> 28 29</div>
 				<!-- week -->
-				<div class="sixth-week"> 30 <span class="grey">01 02 03 04 05 06</span></div>
+				<div class="sixth-week">30 <span class="grey">01 02 03 04 05 06</span></div>
 				<!-- week -->
 				</div>
 				<!-- num-dates -->
@@ -162,17 +137,39 @@
 				<!-- add-event -->
 			</div>
 			<!-- calendar-left -->
-			</div>
-			<!-- container -->
+		</div>
+		<!-- container -->
+		
+		<table>
+			<tr>
+				<th>Servicios</th>
+				<th>Telefonos</th> 
+			</tr>
+			<tr>
+				<td>SRI</td>
+				<td>9804924</td> 				
+			</tr>
+			<tr>
+				<td>Agua Potable</td>
+				<td>3543553</td> 
+			</tr>
+			<tr>
+				<td>Electricidad</td>
+				<td>354355344</td> 
+			</tr>
+			<tr>
+				<td>Gas</td>
+				<td>12341413</td> 
+			</tr>
+		</table>
 		
 		
 		<footer>
-			<div>
-				<h3>&copy El contenido de esta obra es de propiedad intelectual de nuestro grupo. Todos los derechos reservados.  Prohibida su reproducción total, parcial, comunicación pública o distribución sin autorización previa del titular de los derechos</h3>
+			<div class="footer-block">
+				<p>&copy El contenido de esta obra es de propiedad intelectual de nuestro grupo. Todos los derechos reservados.  Prohibida su reproducción total, parcial, comunicación pública o distribución sin autorización previa del titular de los derechos</p>
+			
+				<img src= "http://sytechlabs.com/img/whatiswebapplication.png">
 			</div>
-			
-			<img src= "http://sytechlabs.com/img/whatiswebapplication.png">
-			
 		</footer>
 	</body>
 		
