Arreglos varios, terminando, estilo fomrulario

--- a/Servicios/personal.html
+++ b/Servicios/personal.html
@@ -47,10 +47,10 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 			<h2>Servicios Registrados</h2>
 			<ul>
-				<li><span class="tooltip">SRI</span> <span class="tooltiptext">Descripcion Servicio de Rentas Internas</span></li>
+				<li><span class="tooltip">SRI</span><span class="tooltiptext">Descripcion Servicio de Rentas Internas</span></li>
 				<li><span class="tooltip">Telefonia Movil </span><span class="tooltiptext">Descripcion telefonia movil</span></li>
 				<li><span class="tooltip">Telefonia fija </span><span class="tooltiptext">Descripcion telefonia fija</span></li>
-				<li><span class="tooltip">cable </span><span class="tooltiptext">descripcion de cable</span></li>
+				<li><span class="tooltip">Cable</span><span class="tooltiptext">Descripcion de cable </span></li>
 				<li><span class="tooltip">Pensiones alimenticias</span> <span class="tooltiptext">descripcion pensiones alimenticias</span></li>
 			</ul>
 		</div>
