--- a/Servicios/index.html
+++ b/Servicios/index.html
@@ -4,7 +4,7 @@
 	<head>		
 		<meta charset="UTF-8">
 		<title>TodoMisServicios - Quienes Somos</title>
-		<!-- <link rel="stylesheet" href="./css/calendar.css"> -->
+		<link rel="stylesheet" href="./css/calendar.css">
 		<link rel="stylesheet" href="./css/tallercss1.css">
 
 		<link href="http://assets.insights.litmus.com/campaigns/tedc-2015/assets/tweets.css" type="text/css" rel="stylesheet" />
@@ -56,11 +56,6 @@
 				<div class="year">2018</div>
 				<!-- year -->
 			
-				<div class="triangle-left"></div>
-				<!--triangle -->
-				<div class="triangle-right"></div>
-				<!--  triangle -->
-			
 				<div class="months">
 				<span class="month-hover">Jan</span>
 				<span class="month-hover">Feb</span> 
@@ -82,59 +77,31 @@
 			
 				<div class="num-dates">
 			
-				<div class="first-week"><span class="grey">26 27 28 29 30 31</span> 01</div>
+				<div class="week"><span class="grey">26 27 28 29 30 31</span> 01</div>
 				<!-- first week -->
-				<div class="second-week">02 03 04 05 06 07 08</div>
+				<div class="week">02 03 04 05 06 07 08</div>
 				<!-- week -->
-				<div class="third-week">09 10 11 12 13 14 15</div>
+				<div class="week">09 10 11 12 13 14 15</div>
 				<!-- week -->
-				<div class="fourth-week">16 17 18 19 20 21 22</div>
+				<div class="week">16 17 18 19 20 21 22</div>
 				<!-- week -->
-				<div class="fifth-week">23 24 25 26 <strong class="white">27</strong> 28 29</div>
+				<div class="week">23 24 25 26 <strong class="white">27</strong> 28 29</div>
 				<!-- week -->
-				<div class="sixth-week">30 <span class="grey">01 02 03 04 05 06</span></div>
+				<div class="week">30 <span class="grey">01 02 03 04 05 06</span></div>
 				<!-- week -->
 				</div>
-				<!-- num-dates -->
-				<div class="event-indicator"></div>
-				<!-- event-indicator -->
-				<div class="active-day"></div>
-				<!-- active-day -->
-				<div class="event-indicator two"></div>
-				<!-- event-indicator -->
-			
+							
 			</div>
 			<!-- calendar-base -->
 			<div class="calendar-left">
-			
-				<div class="hamburger">
-				<div class="burger-line"></div>
-				<!-- burger-line -->
-				<div class="burger-line"></div>
-				<!-- burger-line -->
-				<div class="burger-line"></div>
-				<!-- burger-line -->
-				</div>
-				<!-- hamburger -->
-			
-			
-				<div class="num-date">27</div>
-				<!--num-date -->
-				<div class="day">THURSDAY</div>
 				<!--day -->
 				<div class="current-events">Current Events
 				<br/>
 				<ul>
 					<li>Day 09 Daily CSS Image</li>
 				</ul>
-				<span class="posts">See post events</span></div>
-				<!--current-events -->
-			
-				<div class="create-event">Create an Event</div>
-				<!-- create-event -->
-				<hr class="event-line" />
-				<div class="add-event"><span class="add">+</span></div>
-				<!-- add-event -->
+				</div>
+							
 			</div>
 			<!-- calendar-left -->
 		</div>
